--- a/winner.css
+++ b/winner.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Impact, sans-serif;
+    font-family: Arial, sans-serif;
     background: linear-gradient(to bottom, #284F61, #2b596d);
     color: white;
     display: flex;
