--- a/style/history.css
+++ b/style/history.css
@@ -1,3 +1,471 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f0f0f0; 
+    font-family: Calibri, sans-serif;
+    overflow-x: auto; 
+    overflow-y: hidden; 
+    white-space: nowrap; 
+}
+
+.container-bg {
+    width: 1720px;
+    height: 810px;
+    position: relative;
+    overflow: hidden; 
+    display: flex; 
+}
+
+
+.container-bg img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.box-container {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1720px;
+    height: 1000px;
+    padding: 20px;
+    background: rgba(58, 14, 14, 0.8);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto; 
+    max-height: 110vh;
+}
+
+.box-1 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-right: 1200px;
+
+}
+
+.box-1 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-1 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-1 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-2 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-right: 400px;
+
+}
+
+.box-2 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-2 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-2 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-3 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-left: 400px;
+
+}
+
+.box-3 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-3 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-3 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-4 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-left: 1200px;
+
+}
+
+.box-4 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-4 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-4 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-5 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-left: 2000px;
+
+}
+
+.box-5 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-5 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-5 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-6 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-left: 2800px;
+
+}
+
+.box-6 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-6 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-6 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-7 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-left: 3600px;
+
+}
+
+.box-7 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-7 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-7 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+.box-8 {
+    width: 350px;
+    height: 500px;
+    background-color: #B02213;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
+    position: fixed;
+    top: 210px;
+    margin-left: 4400px;
+
+}
+
+.box-8 img {
+    width: 80%;
+    height: auto;
+    margin-left: 40px;
+    top: 20px;
+    position: absolute;
+}
+
+#time-8 {
+    position: absolute;
+    font-size: 20px;
+    width: 100px;
+    top: 320px; 
+    left: 55%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+#price-8 {
+    position: absolute;
+    font-size: 30px;
+    width: 100px;
+    top: 380px; 
+    left: 45%; 
+    transform: translate(-50%, -50%);
+    font-family: sans-serif, calibri;
+    color: white;
+    border-radius: 5px;
+}
+
+footer {
+    display: none;
+}    
+
+.header-icons {
+    position: absolute;
+    bottom: 670px; 
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+    background-color: #DE2915;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    gap: 70px; 
+    flex-wrap: nowrap;
+}
+
+.nav-icon-1 {
+    font-size: 30px;
+    color: #620A0A; 
+    width: 25%;
+    margin-left: 2140%;
+    top: 3px;
+    position: relative;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+    display: flex;
+
+}
+
+.nav-icon-2 {
+    font-size: 30px;
+    color: #620A0A; 
+    width: 25%;
+    margin-left: 2350%;
+    top: 3px;
+    position: relative;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+    display: flex;
+
+}
+
+.nav-icon-3 {
+    font-size: 30px;
+    color: #620A0A; 
+    width: 25%;
+    top: 22px;
+    margin-left: -66%;
+    position: absolute;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+    display: flex;
+
+}
+
+.nav-icon:hover {
+    color: #CC200D;
+    text-shadow: 0px 0px 10px rgba(255, 0, 0, 0.8);
+}
+
 @media (min-width: 200px) and (max-width: 500px) {
     * {
         margin: 0;
@@ -17,8 +485,8 @@
     }
 
     .container-bg {
-        width: 300px;
-        height: 568px;
+        width: 500px;
+        height: 667px;
         position: relative;
         overflow: hidden; 
     }
@@ -37,8 +505,8 @@
         top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 300px; 
-        height: 90%;
+        width: 500px; 
+        height: 675px;
         padding: 20px;
         background: rgba(58, 14, 14, 0.8);
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -47,10 +515,11 @@
         justify-content: center;
         align-items: center;
         overflow-y: auto; 
-        max-height: 90vh;
+        max-height: 100vh;
     }
 
     .box-1 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
@@ -63,7 +532,7 @@
     }
 
     .box-1 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%;
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -97,6 +566,7 @@
     }
 
     .box-2 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
@@ -109,7 +579,7 @@
     }
 
     .box-2 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -143,6 +613,7 @@
     }
 
     .box-3 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
@@ -150,12 +621,12 @@
         box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
         position: fixed;
         top: 350px;
-        margin-right: 150px;
+        margin-right: 250px;
 
     }
 
     .box-3 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -189,19 +660,20 @@
     }
 
     .box-4 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
         border-radius: 10px;
         box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
         position: fixed;
-        top: 510px;
-        margin-right: 150px;
+        top: 350px;
+        margin-right: 1350px;
 
     }
 
     .box-4 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -235,6 +707,7 @@
     }
 
     .box-5 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
@@ -247,7 +720,7 @@
     }
 
     .box-5 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -281,6 +754,7 @@
     }
 
     .box-6 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
@@ -293,7 +767,7 @@
     }
 
     .box-6 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -324,22 +798,23 @@
         color: white;
         padding: 5px 10px;
         border-radius: 5px;
-    }
+    } 
 
     .box-7 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
         border-radius: 10px;
         box-shadow: 2px 2px 10px 3px rgba(20, 14, 14, 0.8);
         position: fixed;
-        top: 350px;
-        margin-left: 150px;
+        top: 510px;
+        margin-left: -150px;
 
     }
 
     .box-7 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -370,9 +845,10 @@
         color: white;
         padding: 5px 10px;
         border-radius: 5px;
-    }
+    } 
 
     .box-8 {
+        margin-top: 20px;
         width: 100px;
         height: 150px;
         background-color: #B02213;
@@ -385,7 +861,7 @@
     }
 
     .box-8 img {
-        width: 80%; /* Adjust as needed */
+        width: 80%; 
         height: auto;
         margin-left: 10px;
         top: 10px;
@@ -416,7 +892,7 @@
         color: white;
         padding: 5px 10px;
         border-radius: 5px;
-    }
+    } 
 
     footer {
         position: absolute;
@@ -443,6 +919,9 @@
 
     }
     
+    .header-icons {
+        display: none;
+    }
     
     .nav-icon:hover {
         color: #CC200D;
