--- a/style/login.css
+++ b/style/login.css
@@ -92,7 +92,7 @@
         margin-top: 100px;
     }
     
-    .login-btn {
+    .signin-btn {
         width: 70%;
         margin-top: 60px;
         display: inline-block;
@@ -239,7 +239,7 @@
         margin-left: 50px;
     }
 
-    .login-btn {
+    .signin-btn {
         width: 70%;
         display: inline-block;
         text-align: center;
@@ -257,7 +257,7 @@
         position: relative;
     }
     
-    .login-btn:hover {
+    .signin-btn:hover {
         background: #D1322E;
     }
     
