--- a/style/signup.css
+++ b/style/signup.css
@@ -137,8 +137,8 @@
     }
 
     .container-bg {
-        width: 550px;
-        height: 667px;
+        width: 300px;
+        height: 568px;
         position: relative;
         overflow: hidden; 
     }
@@ -158,7 +158,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 270px; 
-        height: 450px;
+        height: 75%;
         padding: 20px;
         background: rgba(58, 14, 14, 0.8);
         border-radius: 10px;
@@ -170,54 +170,48 @@
     }
 
     .box-log {
-        width: 220px;
-        height: 330px;
+        width: 90%;
+        height: 75%;
         background: #B02213;
-        margin-right: 5px;
         padding: 15px;
-        border-radius: 8px;
+        border-radius: 20px;
         position: relative;
         text-align: center;
         color: white;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        margin-top: 70px;
+        margin-top: 10px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 10px;
     }
 
     .box-log p {
-        font-size: 15px;
-        top: 15px;
-        margin-bottom: 5px;
-        position: relative;
+        font-size: 10px;
+        margin-bottom: 1px;
     }
 
     .box-log input {
-        width: 160px;
-        height: 30px;
+        width: 90%;
+        padding: 6px;
         border: none;
         border-radius: 20px;
-        margin-bottom: 20px;
-        bottom: 50px;
-        top: 20px;
+        margin-bottom: 2px;
         background: #FFE8C2;
-        position: relative;
-        text-align: center;
         color: black;
-        font-size: 15px;
+        font-size: 8px;
         font-family: Calibri, sans-serif;
     }
 
     .box-container img {
         width: 60%;
         height: 40%;
-        position: absolute;
+        position: relative;
         display: block;
         margin: 0 auto;
-        margin-top: -90px;
-        margin-left: 50px;
+        margin-top: -100px;
+        margin-bottom: 5px;
     }
     
     .signup-btn {
@@ -228,15 +222,14 @@
         padding: 5px 10px;
         background: #E34D3D;
         color: white;
-        font-size: 15px;
+        font-size: 12px;
         font-family: Calibri, sans-serif;
         border-radius: 20px;
         transition: background 0.3s ease;
-        top: 10px;
-        position: relative;
     }
 
     .signup-btn:hover {
         background: #D1322E;
+
     }
 }
