--- a/style/game.css
+++ b/style/game.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 500px) and (max-width: 1920px) {
     * {
         margin: 0;
@@ -161,33 +160,75 @@
     }
     
     .pot-money {
-        border-radius: 20px;
+        position: absolute; 
+        bottom: 380px;
+    }  
+
+    .pot-money p {
+        color: white;
+        align-items: center;
+        position: relative;
+        font-size: 20px;
+        top: 10px;
+    }
+
+    .money1 {
         height: 50px;
-        width: 500px; 
-        top: 120px;
-        margin-bottom: 220px;
+        width: 290px; 
+        top: 10px;
+        margin-bottom: 10px;
         color: #B02213; 
         background-color: #E34D3D; 
         border: 2px solid #E34D3D;
-        position: absolute; 
+        border-radius: 20px;
+        position: relative; 
         font-size: 16px;
         text-align: center; 
-    }  
+    }
+
+    .money2 {
+        height: 50px;
+        width: 290px; 
+        top: 10px;
+        margin-bottom: 10px;
+        color: #B02213; 
+        background-color: #E34D3D; 
+        border: 2px solid #E34D3D;
+        border-radius: 20px;
+        position: relative; 
+        font-size: 16px;
+        text-align: center; 
+    }
+
+    .money3 {
+        height: 50px;
+        width: 290px; 
+        top: 10px;
+        margin-bottom: 10px;
+        color: #B02213; 
+        background-color: #E34D3D; 
+        border: 2px solid #E34D3D;
+        border-radius: 20px;
+        position: relative; 
+        font-size: 16px;
+        text-align: center; 
+    }
     
     .pot-name {
         color: white;
-        margin-top: -50px;
-        margin-left: 190px;
+        margin-bottom: 20px;
+        margin-left: 90px;
         position: absolute;
         width: 100px;
         height: 30px;
         font-family: sans-serif, impact;
         border-radius: 20px;
+        position: relative;
         display: flex;
         justify-content: center; 
         align-items: center; 
-        text-align: center; 
-    }  
+        text-align: center; /* Extra safety for text centering */
+    }   
     
     .time {
         position: relative;
@@ -535,28 +576,69 @@
     }
 
     .pot-money {
-        border-radius: 20px;
+        position: absolute; 
+        top: 20px;
+    }  
+
+    .pot-money p {
+        color: white;
+        align-items: center;
+        position: relative;
+        top: 10px;
+    }
+
+    .money1 {
         height: 40px;
         width: 170px; 
-        top: 60px;
-        margin-bottom: 220px;
+        top: 10px;
+        margin-bottom: 10px;
         color: #B02213; 
         background-color: #E34D3D; 
         border: 2px solid #E34D3D;
-        position: absolute; 
+        border-radius: 20px;
+        position: relative; 
         font-size: 16px;
         text-align: center; 
-    }  
+    }
+
+    .money2 {
+        height: 40px;
+        width: 170px; 
+        top: 10px;
+        margin-bottom: 10px;
+        color: #B02213; 
+        background-color: #E34D3D; 
+        border: 2px solid #E34D3D;
+        border-radius: 20px;
+        position: relative; 
+        font-size: 16px;
+        text-align: center; 
+    }
+
+    .money3 {
+        height: 40px;
+        width: 170px; 
+        top: 10px;
+        margin-bottom: 10px;
+        color: #B02213; 
+        background-color: #E34D3D; 
+        border: 2px solid #E34D3D;
+        border-radius: 20px;
+        position: relative; 
+        font-size: 16px;
+        text-align: center; 
+    }
     
     .pot-name {
         color: white;
-        margin-top: -50px;
+        margin-bottom: 20px;
         margin-left: 35px;
         position: absolute;
         width: 100px;
         height: 30px;
         font-family: sans-serif, impact;
         border-radius: 20px;
+        position: relative;
         display: flex;
         justify-content: center; 
         align-items: center; 
